k8s-logging/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-kibana
  labels:
    app: kibana
    release: kibana
    heritage: Tiller
spec:
  type: NodePort
  ports:
    - port: 5601
      protocol: TCP
      name: http
  selector:
    app: kibana
    release: kibana
