k8s-logging/efk-ingress-auth.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - shibana"
spec:
  rules:
  - host: shibana.spacemesh.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-kibana
          servicePort: http
